# internal/api/app.go
@@ -6,18 +6,21 @@ import (
 	"github.com/axidex/CryptBot/internal/app"
 	"github.com/axidex/CryptBot/pkg/logger"
 	"github.com/gin-gonic/gin"
+	"github.com/go-resty/resty/v2"
 )
 
 type App struct {
-	config Config
-	logger logger.Logger
-	engine *gin.Engine
+	config    Config
+	logger    logger.Logger
+	engine    *gin.Engine
+	desClient *resty.Client
 }
 
-func CreateApp(config Config, logger logger.Logger) app.App {
+func CreateApp(config Config, logger logger.Logger, desClient *resty.Client) app.App {
 	apiApp := &App{
-		config: config,
-		logger: logger,
+		config:    config,
+		logger:    logger,
+		desClient: desClient,
 	}
 	apiApp.InitRoutes()
 	return apiApp
@@ -43,6 +46,19 @@ func (app *App) InitRoutes() {
 		{
 			v1.Use(rateLimiter)
 			v1.POST("/des3", app.Des3)
+			v1.POST("/a5", app.A5)
+			v1.POST("/aes", app.Aes)
+			v1.POST("/blowfish", app.Blowfish)
+			v1.POST("/des", app.Des)
+			v1.POST("/diffie", app.Diffie)
+			v1.POST("/elgamal", app.Elgamal)
+			v1.POST("/enigma", app.Enigma)
+			v1.POST("/feistel", app.Feistel)
+			v1.POST("/hash", app.Hash)
+			v1.POST("/invMix", app.InvMix)
+			v1.POST("/md5", app.Md5)
+			v1.POST("/rsa", app.Rsa)
+			v1.POST("/sBlock", app.SBlock)
 		}
 
 	}
@@ -57,15 +73,13 @@ func (app *App) listRoutes(router *gin.Engine) {
 	}
 }
 
-func (app *App) Run() {
-	for {
-		err := app.engine.Run(fmt.Sprintf(":%d", app.config.Port))
-		if err != nil {
-			app.logger.Fatalf("Failed to start server - %s", err)
-		}
-	}
+func (app *App) Run() error {
+	route := fmt.Sprintf(":%d", app.config.Port)
+	app.logger.Infof("Starting api %s", route)
+	return app.engine.Run(route)
 }
 
-func (app *App) Stop() {
-
+func (app *App) Stop(err error) {
+	app.logger.Infof("Stopping api")
+	app.logger.Infof("Api stopped")
 }
